Fix styling bug on mobile landscape orientation - Change socials element height to 40rem on landscape mode - Change flex gap to 3rem

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1023,6 +1023,9 @@ section.contact {
     @include mobile {
       flex-direction: column-reverse;
     }
+    @include landscape {
+      gap: 3rem;
+    }
   }
   form {
     position: relative;
@@ -1097,6 +1100,9 @@ section.contact {
   background: $wood-light;
   @include mobile {
     width: 88vw;
+  }
+  @include landscape {
+    height: 40rem;
   }
   //opacity: 0;
   p {
